--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@ layout: default
     <div class="container-fluid">
         <div class="mast">
             <h1>material</h1>
-            <h4>a <b>solid</b> way to make your presence felt</h4> free &amp; <b>open-source</b> way to a one-click blog/website on <b>GitHub</b> with Jekyll and MaterializeCSS
+            <h4>Umitems</h4>
+            Android Developer, Agile, Work remotely
             <br>
             <h6>based on google&trade;'s <b>material design</b> specifications</h6>
             <h4><b>work-in-progress</b></h4>
