add profile img, also optimize the img for faster load

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
    
     <div class="container-fluid">
         <div class="mast">
-            <h1>material</h1>
+            <img src="img/profile-fastload.jpg">
             <h4>Umitems</h4>
             Android Developer, Agile, Work remotely
             <br>
@@ -83,15 +83,6 @@ layout: default
                     </li>
                 </ul>
             </div>
-        </div>
-    </div>
-
-
-
-    <div class="row">
-        <h1><br>-get-started-<br></h1>
-        <div class="container-fluid">
-        There are 7 simple steps to get your website up and running using material. Keep scrolling to see em'. The steps mentioned here have been explained in order to cater to n00bs. If you think you are pro, then scroll faster. xP
         </div>
     </div>
 
