--- a/index.html
+++ b/index.html
@@ -3,91 +3,107 @@ layout: default
 ---
 <div>
 
-<div id="skrollr-body">
-<div id="non-skrollr">
-   
-    <div class="container-fluid">
-        <div class="mast">
-            <img src="img/profile-fastload.jpg">
-            <h4>Umitems</h4>
-            Android Developer, Agile, Work remotely
-            <br>
-            <h6>based on google&trade;'s <b>material design</b> specifications</h6>
-            <h4><b>work-in-progress</b></h4>
-            <a target="_blank" href="https://umitems.github.io//material" class="{{ site.css }} darken-2 white-text text-darken-3 waves-effect waves-light btn"><i class="mdi-action-get-app"></i> View on github</a><br>
-            <i class="mdi-navigation-arrow-drop-down" style="font-size: 200px;"></i>
-        </div>
-    </div>
+    <div id="skrollr-body">
+        <div id="non-skrollr">
 
+            <div class="container-fluid">
+                <div class="mast">
+                    <img src="img/profile-fastload.jpg">
+                    <h4>Um Anusornpakdee</h4>
+                    <h5>Android Developer, Agile, Work remotely</h5>
+                    <br>
+                    <h6>based on google&trade;'s <b>material design</b> specifications</h6>
 
-
-    <div class="container-fluid card {{ site.css }} z-depth-2 waves-effect waves-light">
-        <div class="cover z-depth-1" style="background-image: /*url('{{site.baseurl}}/img/1.jpg');*/">
-            <div class="filter {{site.css}}" style="opacity: 0.7;">
-                <div class="cover-text {{ site.css }}-text text-darken-4">
-                    <span style="font-size: 50px;">< about-material /></span>
+                    <a target="_blank" href="https://umitems.github.io/"
+                       class="{{ site.css }} darken-2 white-text text-darken-3 waves-effect waves-light btn"><i
+                            class="mdi-action-get-app"></i> View on github</a><br>
+                    <i class="mdi-navigation-arrow-drop-down" style="font-size: 200px;"></i>
                 </div>
             </div>
-        </div>
-        <div class="card-content white-text">
-            <div class="card-title">
-                <h4>about-material</h4>
+
+
+            <div class="container-fluid card {{ site.css }} z-depth-2 waves-effect waves-light">
+                <div class="cover z-depth-1" style="background-image: /*url('{{site.baseurl}}/img/1.jpg');*/">
+                    <div class="filter {{site.css}}" style="opacity: 0.7;">
+                        <div class="cover-text {{ site.css }}-text text-darken-4">
+                            <span style="font-size: 50px;">< about-material /></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-content white-text">
+                    <div class="card-title">
+                        <h4>about-material</h4>
+                    </div>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vel purus sagittis, eleifend ante
+                    quis, tempus lectus. Vivamus maximus nibh lectus, sed gravida sapien imperdiet in.
+                    <br>
+                    <br> Curabitur non purus rutrum, iaculis mauris ac, placerat turpis. Donec vel semper enim, ut
+                    ultrices sem. Fusce rutrum, justo id porta malesuada, purus erat gravida metus, sit amet viverra
+                    turpis lacus nec mi. Aliquam et mi vel ipsum mollis aliquam eu eget augue. Lorem ipsum dolor sit
+                    amet, consectetur adipiscing elit.
+                    <br>
+                    <bR> Aliquam vel purus sagittis, eleifend ante quis, tempus lectus. Vivamus maximus nibh lectus, sed
+                    gravida sapien imperdiet in. Curabitur non purus rutrum, iaculis mauris ac, placerat turpis. Donec
+                    vel semper enim, ut ultrices sem.
+                    <br>
+                    <br> Fusce rutrum, justo id porta malesuada, purus erat gravida metus, sit amet viverra turpis lacus
+                    nec mi. Aliquam et mi vel ipsum mollis aliquam eu eget augue.
+                </div>
             </div>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vel purus sagittis, eleifend ante quis, tempus lectus. Vivamus maximus nibh lectus, sed gravida sapien imperdiet in.
-            <br>
-            <br> Curabitur non purus rutrum, iaculis mauris ac, placerat turpis. Donec vel semper enim, ut ultrices sem. Fusce rutrum, justo id porta malesuada, purus erat gravida metus, sit amet viverra turpis lacus nec mi. Aliquam et mi vel ipsum mollis aliquam eu eget augue. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            <br>
-            <bR> Aliquam vel purus sagittis, eleifend ante quis, tempus lectus. Vivamus maximus nibh lectus, sed gravida sapien imperdiet in. Curabitur non purus rutrum, iaculis mauris ac, placerat turpis. Donec vel semper enim, ut ultrices sem.
-            <br>
-            <br> Fusce rutrum, justo id porta malesuada, purus erat gravida metus, sit amet viverra turpis lacus nec mi. Aliquam et mi vel ipsum mollis aliquam eu eget augue.
+
+
+            <div class="row">
+                <h1><br>-advantages-<br></h1>
+
+                <div class="container-fluid">
+                    <div class="col s12 m6">
+                        <ul>
+                            <li class="card advantage {{site.css}} white-text darken-1 waves-effect waves-light">
+                                <h4>completely-free</h4> Material is completely free for whatever use you may ever want
+                                to use it for under the terms of the MIT Licence.
+                            </li>
+                            <li class="card advantage {{site.css}} white-text waves-effect waves-light">
+                                <h4>fully-open-source</h4> Material's source code is fully open source and is hosted at
+                                GitHub (https://github.com/naveenshaji/material/). It is released under the terms of the
+                                MIT Licence.
+                            </li>
+                            <li class="card advantage {{site.css}} white-text darken-1 waves-effect waves-light">
+                                <h4>material-design</h4> Material is based on google's material design specifications.
+                                duh! All you need to know is that it look solid and feels solid.
+                            </li>
+                            <li class="card advantage {{site.css}} white-text waves-effect waves-light">
+                                <h4>ease-of-access</h4> Your blog or website will be hosted on a GitHub repository and
+                                therefore, you will be able to just 'commit' new blog posts. Plus you get all the
+                                benefits of GitHub if you are making a collaborated blog.
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col s12 m6">
+                        <ul>
+                            <li class="card advantage {{site.css}} white-text waves-effect waves-light">
+                                <h4>hosted-on-github</h4> Your website/blog can be hosted for free on GitHub, which
+                                means you get to take advantage of GitHub's servers which have proven themselves to
+                                provide almost 100% uptime.
+                            </li>
+                            <li class="card advantage {{site.css}} white-text darken-1 waves-effect waves-light">
+                                <h4>feel-like-hax0r</h4> Commiting new blogposts written in markdown is sure to give you
+                                the feels. Having your blog hosted alongside code will make you feel like a mini-hax0r
+                                even if you are not one.
+                            </li>
+                            <li class="card advantage {{site.css}} white-text waves-effect waves-light">
+                                <h4>write-in-markdown</h4> WSIWYG editors are for losers. Markdown ftw!!
+                            </li>
+                            <li class="card advantage {{site.css}} white-text darken-1 waves-effect waves-light">
+                                <h4>mit-licence</h4> Material is released under the terms of the MIT Licence which give
+                                you a lot of freedom regarding editing the code involved.
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
     </div>
-
-
-
-
-
-
-    <div class="row">
-        <h1><br>-advantages-<br></h1>
-        <div class="container-fluid">
-            <div class="col s12 m6">
-                <ul>
-                    <li class="card advantage {{site.css}} white-text darken-1 waves-effect waves-light">
-                        <h4>completely-free</h4> Material is completely free for whatever use you may ever want to use it for under the terms of the MIT Licence.
-                    </li>
-                    <li class="card advantage {{site.css}} white-text waves-effect waves-light">
-                        <h4>fully-open-source</h4> Material's source code is fully open source and is hosted at GitHub (https://github.com/naveenshaji/material/). It is released under the terms of the MIT Licence.
-                    </li>
-                    <li class="card advantage {{site.css}} white-text darken-1 waves-effect waves-light">
-                        <h4>material-design</h4> Material is based on google's material design specifications. duh! All you need to know is that it look solid and feels solid.
-                    </li>
-                    <li class="card advantage {{site.css}} white-text waves-effect waves-light">
-                        <h4>ease-of-access</h4> Your blog or website will be hosted on a GitHub repository and therefore, you will be able to just 'commit' new blog posts. Plus you get all the benefits of GitHub if you are making a collaborated blog.
-                    </li>
-                </ul>
-            </div>
-            <div class="col s12 m6">
-                <ul>
-                    <li class="card advantage {{site.css}} white-text waves-effect waves-light">
-                        <h4>hosted-on-github</h4> Your website/blog can be hosted for free on GitHub, which means you get to take advantage of GitHub's servers which have proven themselves to provide almost 100% uptime.
-                    </li>
-                    <li class="card advantage {{site.css}} white-text darken-1 waves-effect waves-light">
-                        <h4>feel-like-hax0r</h4> Commiting new blogposts written in markdown is sure to give you the feels. Having your blog hosted alongside code will make you feel like a mini-hax0r even if you are not one.
-                    </li>
-                    <li class="card advantage {{site.css}} white-text waves-effect waves-light">
-                        <h4>write-in-markdown</h4> WSIWYG editors are for losers. Markdown ftw!!
-                    </li>
-                    <li class="card advantage {{site.css}} white-text darken-1 waves-effect waves-light">
-                        <h4>mit-licence</h4> Material is released under the terms of the MIT Licence which give you a lot of freedom regarding editing the code involved.
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-
-
-</div>
-</div>
 
 </div>
