--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
                     <img src="img/profile-fastload.jpg">
                     <h4>Um Anusornpakdee</h4>
                     <h5>Android Developer, Agile, Work remotely</h5>
-
+                    <i class="mdi mdi-bell"></i>  <!-- bell -->
                     <h6>based on google&trade;'s <b>material design</b> specifications</h6>
                     <br>
                     <a target="_blank" href="https://umitems.github.io/"
