--- a/index.html
+++ b/index.html
@@ -11,13 +11,34 @@ layout: default
                     <img src="img/profile-fastload.jpg">
                     <h4>Um Anusornpakdee</h4>
                     <h5>Android Developer, Agile, Work remotely</h5>
-                    <i class="mdi mdi-bell"></i>  <!-- bell -->
+                    <i class="mdi mdi-bell"></i> <!-- bell -->
                     <h6>based on google&trade;'s <b>material design</b> specifications</h6>
                     <br>
                     <a target="_blank" href="https://umitems.github.io/"
                        class="{{ site.css }} darken-2 white-text text-darken-3 waves-effect waves-light btn"><i
                             class="mdi-action-get-app"></i> View on github</a><br>
                     <i class="mdi-navigation-arrow-drop-down" style="font-size: 200px;"></i>
+
+                    <a target="_blank" href="https://github.com/umitems"
+                       class="{{ site.css }} darken-2 white-text text-darken-3 waves-effect waves-light btn"><i
+                            class="mdi-action-get-app"></i>
+                        <img src="img/github-box.svg" class="svg"></a>
+
+                    <a target="_blank" href="https://th.linkedin.com/in/umanusorn"
+                       class="{{ site.css }} darken-2 white-text text-darken-3 waves-effect waves-light btn"><i
+                            class="mdi-action-get-app"></i>
+                    <img src="img/linkedin-box.svg" class="svg"></a>
+
+
+                    <a target="_blank" href="https://th.linkedin.com/in/umanusorn"
+                       class="{{ site.css }} darken-2 white-text text-darken-3 waves-effect waves-light btn"><i
+                            class="mdi-action-get-app"></i>
+                    <img src="img/twitter-box.svg" class="svg"></a>
+
+                    <a target="_blank" href="https://stackoverflow.com/users/1025935/umitems"
+                       class="{{ site.css }} darken-2 white-text text-darken-3 waves-effect waves-light btn"><i
+                            class="mdi-action-get-app"></i>
+                    <img src="img/stackoverflow.svg" class="svg"></a>
                 </div>
             </div>
 
