--- a/index.html
+++ b/index.html
@@ -13,32 +13,28 @@ layout: default
                     <h5>Android Developer, Agile, Work remotely</h5>
                     <i class="mdi mdi-bell"></i> <!-- bell -->
                     <h6>based on google&trade;'s <b>material design</b> specifications</h6>
-                    <br>
                     <a target="_blank" href="https://umitems.github.io/"
-                       class="{{ site.css }} darken-2 white-text text-darken-3 waves-effect waves-light btn"><i
-                            class="mdi-action-get-app"></i> View on github</a><br>
+                       class="{{ site.css }} darken-2 white-text text-darken-3 waves-effect waves-light btn">View on github</a><br>
                     <i class="mdi-navigation-arrow-drop-down" style="font-size: 200px;"></i>
 
                     <a target="_blank" href="https://github.com/umitems"
-                       class="{{ site.css }} darken-2 white-text text-darken-3 waves-effect waves-light btn"><i
-                            class="mdi-action-get-app"></i>
+                       class="{{ site.css }} darken-2 white-text text-darken-3 waves-effect waves-light btn">
                         <img src="img/github-box.svg" class="svg"></a>
 
                     <a target="_blank" href="https://th.linkedin.com/in/umanusorn"
-                       class="{{ site.css }} darken-2 white-text text-darken-3 waves-effect waves-light btn"><i
-                            class="mdi-action-get-app"></i>
-                    <img src="img/linkedin-box.svg" class="svg"></a>
+                       class="{{ site.css }} darken-2 white-text text-darken-3 waves-effect waves-light btn">
+                        <img src="img/linkedin-box.svg" class="svg"></a>
 
 
                     <a target="_blank" href="https://th.linkedin.com/in/umanusorn"
-                       class="{{ site.css }} darken-2 white-text text-darken-3 waves-effect waves-light btn"><i
-                            class="mdi-action-get-app"></i>
-                    <img src="img/twitter-box.svg" class="svg"></a>
+                       class="{{ site.css }} darken-2 white-text text-darken-3 waves-effect waves-light btn">
+                        <img src="img/twitter-box.svg" class="svg"></a>
 
                     <a target="_blank" href="https://stackoverflow.com/users/1025935/umitems"
-                       class="{{ site.css }} darken-2 white-text text-darken-3 waves-effect waves-light btn"><i
-                            class="mdi-action-get-app"></i>
-                    <img src="img/stackoverflow.svg" class="svg"></a>
+                       class=" darken-2 white-text text-darken-3 waves-effect waves-light btn">
+                        <img src="img/stackoverflow.svg" class="svg"></a>
+                    <br>
+
                 </div>
             </div>
 
