--- a/index.html
+++ b/index.html
@@ -15,26 +15,21 @@ layout: default
                     <h6>based on google&trade;'s <b>material design</b> specifications</h6>
 
                     <a target="_blank" href="https://github.com/umitems"
-                       class="{{ site.css }} darken-2 white-text text-darken-3 waves-effect waves-light">
-                        <img src="img/github-box.svg" class="svg"></a>
+                       class=" darken-2 white-text text-darken-3 waves-effect waves-light">
+                        <img src="img/github-box.svg" class="svg" width="50px" height="50px"></a>
 
                     <a target="_blank" href="https://th.linkedin.com/in/umanusorn"
-                       class="{{ site.css }} darken-2 white-text text-darken-3 waves-effect waves-light">
-                        <img src="img/linkedin-box.svg" class="svg"></a>
+                       class="darken-2 white-text text-darken-3 waves-effect waves-light">
+                        <img src="img/linkedin-box.svg" class="svg" width="50px" height="50px"></a>
 
 
                     <a target="_blank" href="https://th.linkedin.com/in/umanusorn"
-                       class="{{ site.css }} darken-2 white-text text-darken-3 waves-effect waves-light">
-                        <img src="img/twitter-box.svg" class="svg"></a>
+                       class=" darken-2 white-text text-darken-3 waves-effect waves-light btn">
+                        <img src="img/twitter-box.svg" class="svg" width="50px" height="50px"></a>
 
                     <a target="_blank" href="https://stackoverflow.com/users/1025935/umitems"
                        class="darken-2 white-text text-darken-3 waves-effect waves-light">
-                        <img src="img/stackoverflow.svg" class="svg"></a>
-
-                    <a target="_blank" href="https://umitems.github.io/"
-                       class="{{ site.css }} darken-2 white-text text-darken-3 waves-effect waves-light btn">View on github</a><br>
-                    <i class="mdi-navigation-arrow-drop-down" style="font-size: 200px;"></i>
-
+                        <img src="img/stackoverflow.svg" class="svg" width="50px" height="50px"></a>
 
                     <br>
 
