--- a/index.html
+++ b/index.html
@@ -15,21 +15,22 @@ layout: default
                     <h6>based on google&trade;'s <b>material design</b> specifications</h6>
 
                     <a target="_blank" href="https://github.com/umitems"
-                       class=" darken-2 white-text text-darken-3 waves-effect waves-light">
+                       class=" darken-2 white-text text-darken-3 waves-effect waves-light preshadow">
                         <img src="img/github-box.svg" class="svg" width="50px" height="50px"></a>
 
                     <a target="_blank" href="https://th.linkedin.com/in/umanusorn"
-                       class="darken-2 white-text text-darken-3 waves-effect waves-light">
+                       class="darken-2 white-text text-darken-3 waves-effect waves-light btn-flat">
                         <img src="img/linkedin-box.svg" class="svg" width="50px" height="50px"></a>
 
 
                     <a target="_blank" href="https://th.linkedin.com/in/umanusorn"
-                       class=" darken-2 white-text text-darken-3 waves-effect waves-light btn">
+                       class=" darken-2 white-text text-darken-3 waves-effect waves-light btn-floating">
                         <img src="img/twitter-box.svg" class="svg" width="50px" height="50px"></a>
 
                     <a target="_blank" href="https://stackoverflow.com/users/1025935/umitems"
-                       class="darken-2 white-text text-darken-3 waves-effect waves-light">
+                       class="darken-2 white-text text-darken-3 waves-effect waves-light shades">
                         <img src="img/stackoverflow.svg" class="svg" width="50px" height="50px"></a>
+
 
                     <br>
 
