--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ layout: default
                         <img src="img/twitter-box.svg" class="svg" width="50px" height="50px"></a>
 
                     <a target="_blank" href="https://stackoverflow.com/users/1025935/umitems"
-                       class="darken-2 white-text text-darken-3 waves-effect waves-light shades">
+                       class="darken-2 white-text text-darken-3 waves-effect waves-light ">
                         <img src="img/stackoverflow.svg" class="svg" width="50px" height="50px"></a>
 
 
