--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@ layout: default
                     <h6>based on google&trade;'s <b>material design</b> specifications</h6>
 
                     <a target="_blank" href="https://github.com/umitems"
-                       class=" darken-2 white-text text-darken-3 waves-effect waves-light preshadow">
+                       class=" darken-2 white-text text-darken-3 waves-effect waves-light">
                         <img src="img/github-box.svg" class="svg" width="50px" height="50px"></a>
 
                     <a target="_blank" href="https://th.linkedin.com/in/umanusorn"
-                       class="darken-2 white-text text-darken-3 waves-effect waves-light btn-flat">
+                       class="darken-2 white-text text-darken-3 waves-effect waves-light">
                         <img src="img/linkedin-box.svg" class="svg" width="50px" height="50px"></a>
 
 
