--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ layout: default
 
 
                     <a target="_blank" href="https://th.linkedin.com/in/umanusorn"
-                       class=" darken-2 white-text text-darken-3 waves-effect waves-light btn-floating">
+                       class=" darken-2 white-text text-darken-3 waves-effect waves-light">
                         <img src="img/twitter-box.svg" class="svg" width="50px" height="50px"></a>
 
                     <a target="_blank" href="https://stackoverflow.com/users/1025935/umitems"
