--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ layout: default
                 <div class="cover z-depth-1" style="background-image: /*url('{{site.baseurl}}/img/1.jpg');*/">
                     <div class="filter {{site.css}}" style="opacity: 0.7;">
                         <div class="cover-text {{ site.css }}-text text-darken-4">
-                            <span style="font-size: 50px;">< about-material /></span>
+                            <span style="font-size: 50px;"> </span>
                         </div>
                     </div>
                 </div>
