--- a/index.html
+++ b/index.html
@@ -89,8 +89,15 @@ layout: default
                     <div class="col s12 m6">
                         <ul>
                             <li class="card advantage {{site.css}} white-text darken-1 waves-effect waves-light">
-                                <h4>completely-free</h4> Material is completely free for whatever use you may ever want
-                                to use it for under the terms of the MIT Licence.
+                                KitKat Clock+Widget GreenTheme<br>
+                                <a target="_blank" href="https://play.google.com/store/apps/details?id=app.umitems.greenclock">
+
+                                    <img src="https://lh4.ggpht.com/a6C9B7tGj9udTDoDrz4NGLTANpnZYm11J0iDLMkB0yqZsT5sQsgniequmoNqhyqrzYA=w300-rw"
+                                            width="100" height="100"
+
+                                            >
+                                </a>
+
                             </li>
                             <li class="card advantage {{site.css}} white-text waves-effect waves-light">
                                 <h4>fully-open-source</h4> Material's source code is fully open source and is hosted at
