--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ layout: default
                         <img src="img/stackoverflow.svg" class="svg" width="50px" height="50px"></a>
 
 
-                 <!--   <br>-->
+                    <!--   <br>-->
                     <br>
                     <br>
                     <br>
@@ -88,17 +88,22 @@ layout: default
                 <div class="container-fluid">
                     <div class="col s12 m6">
                         <ul>
-                            <li class="card advantage {{site.css}} white-text darken-1 waves-effect waves-light">
-                                KitKat Clock+Widget GreenTheme<br>
-                                <a target="_blank" href="https://play.google.com/store/apps/details?id=app.umitems.greenclock">
+                            <a target="_blank"
+                               href="https://play.google.com/store/apps/details?id=app.umitems.greenclock">
+                                <li class="card advantage {{site.css}} white-text darken-1 waves-effect waves-light">
+                                   My Android App on PlayStore<br>
+                                    KitKat Clock+Widget GreenTheme<br>
 
-                                    <img src="https://lh4.ggpht.com/a6C9B7tGj9udTDoDrz4NGLTANpnZYm11J0iDLMkB0yqZsT5sQsgniequmoNqhyqrzYA=w300-rw"
-                                            width="100" height="100"
+                                    <div style="text-align: center;">
+                                        <img src="https://lh4.ggpht.com/a6C9B7tGj9udTDoDrz4NGLTANpnZYm11J0iDLMkB0yqZsT5sQsgniequmoNqhyqrzYA=w300-rw"
+                                             width="100" height="100"
+                                                >
 
-                                            >
-                                </a>
+                                    </div>
 
-                            </li>
+
+                                </li>
+                            </a>
                             <li class="card advantage {{site.css}} white-text waves-effect waves-light">
                                 <h4>fully-open-source</h4> Material's source code is fully open source and is hosted at
                                 GitHub (https://github.com/naveenshaji/material/). It is released under the terms of the
