--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 
             <div class="container-fluid">
                 <div class="mast">
-                    <img src="img/profile-fastload.jpg">
+                    <img src="img/profile-fastload.jpg" height="200" width="200">
                     <h4>Um Anusornpakdee</h4>
                     <h5>Android Developer, Agile, Work remotely</h5>
                     <i class="mdi mdi-bell"></i> <!-- bell -->
@@ -91,17 +91,13 @@ layout: default
                             <a target="_blank"
                                href="https://play.google.com/store/apps/details?id=app.umitems.greenclock">
                                 <li class="card advantage {{site.css}} white-text darken-1 waves-effect waves-light">
-                                   My Android App on PlayStore<br>
-                                    KitKat Clock+Widget GreenTheme<br>
-
                                     <div style="text-align: center;">
+                                        <h4>My Android App on PlayStore</h4>
+                                        KitKat Clock+Widget GreenTheme<br>
                                         <img src="https://lh4.ggpht.com/a6C9B7tGj9udTDoDrz4NGLTANpnZYm11J0iDLMkB0yqZsT5sQsgniequmoNqhyqrzYA=w300-rw"
                                              width="100" height="100"
                                                 >
-
                                     </div>
-
-
                                 </li>
                             </a>
                             <li class="card advantage {{site.css}} white-text waves-effect waves-light">
@@ -109,15 +105,7 @@ layout: default
                                 GitHub (https://github.com/naveenshaji/material/). It is released under the terms of the
                                 MIT Licence.
                             </li>
-                            <li class="card advantage {{site.css}} white-text darken-1 waves-effect waves-light">
-                                <h4>material-design</h4> Material is based on google's material design specifications.
-                                duh! All you need to know is that it look solid and feels solid.
-                            </li>
-                            <li class="card advantage {{site.css}} white-text waves-effect waves-light">
-                                <h4>ease-of-access</h4> Your blog or website will be hosted on a GitHub repository and
-                                therefore, you will be able to just 'commit' new blog posts. Plus you get all the
-                                benefits of GitHub if you are making a collaborated blog.
-                            </li>
+
                         </ul>
                     </div>
                     <div class="col s12 m6">
@@ -127,18 +115,7 @@ layout: default
                                 means you get to take advantage of GitHub's servers which have proven themselves to
                                 provide almost 100% uptime.
                             </li>
-                            <li class="card advantage {{site.css}} white-text darken-1 waves-effect waves-light">
-                                <h4>feel-like-hax0r</h4> Commiting new blogposts written in markdown is sure to give you
-                                the feels. Having your blog hosted alongside code will make you feel like a mini-hax0r
-                                even if you are not one.
-                            </li>
-                            <li class="card advantage {{site.css}} white-text waves-effect waves-light">
-                                <h4>write-in-markdown</h4> WSIWYG editors are for losers. Markdown ftw!!
-                            </li>
-                            <li class="card advantage {{site.css}} white-text darken-1 waves-effect waves-light">
-                                <h4>mit-licence</h4> Material is released under the terms of the MIT Licence which give
-                                you a lot of freedom regarding editing the code involved.
-                            </li>
+
                         </ul>
                     </div>
                 </div>
