--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@ layout: default
                     <div class="col s12 m6">
                         <ul>
                             <a target="_blank"
-                               href="https://play.google.com/store/apps/details?id=app.umitems.greenclock">
+                               href="https://play.google.com/store/apps/developer?id=Um+Anusornpakdee+%28umitems%29">
                                 <li class="card advantage {{site.css}} white-text darken-1 waves-effect waves-light">
                                     <div style="text-align: center;">
                                         <h4>My Android App on PlayStore</h4>
-                                        KitKat Clock+Widget GreenTheme<br>
-                                        <img src="https://lh4.ggpht.com/a6C9B7tGj9udTDoDrz4NGLTANpnZYm11J0iDLMkB0yqZsT5sQsgniequmoNqhyqrzYA=w300-rw"
-                                             width="100" height="100"
+                                        https://lh4.ggpht.com/a6C9B7tGj9udTDoDrz4NGLTANpnZYm11J0iDLMkB0yqZsT5sQsgniequmoNqhyqrzYA=w300
+                                        <img src="https://developer.android.com/images/brand/en_generic_rgb_wo_60.png"
+                                             width="172" height="60"
                                                 >
                                     </div>
                                 </li>
