update android logo and link

--- a/index.html
+++ b/index.html
@@ -93,19 +93,15 @@ layout: default
                                 <li class="card advantage {{site.css}} white-text darken-1 waves-effect waves-light">
                                     <div style="text-align: center;">
                                         <h4>My Android App on PlayStore</h4>
-                                        https://lh4.ggpht.com/a6C9B7tGj9udTDoDrz4NGLTANpnZYm11J0iDLMkB0yqZsT5sQsgniequmoNqhyqrzYA=w300
                                         <img src="https://developer.android.com/images/brand/en_generic_rgb_wo_60.png"
-                                             width="172" height="60"
-                                                >
+                                             width="172" height="60">
                                     </div>
                                 </li>
                             </a>
                             <li class="card advantage {{site.css}} white-text waves-effect waves-light">
-                                <h4>fully-open-source</h4> Material's source code is fully open source and is hosted at
-                                GitHub (https://github.com/naveenshaji/material/). It is released under the terms of the
-                                MIT Licence.
+                                <h4>fully-open-source</h4> Material's source code is fully open source and is hosted at GitHub
+                                (https://github.com/umitems/umitems.github.io). It is released under the terms of the MIT Licence.
                             </li>
-
                         </ul>
                     </div>
                     <div class="col s12 m6">
