update link to gitHub

--- a/index.html
+++ b/index.html
@@ -98,19 +98,25 @@ layout: default
                                     </div>
                                 </li>
                             </a>
-                            <li class="card advantage {{site.css}} white-text waves-effect waves-light">
-                                <h4>fully-open-source</h4> Material's source code is fully open source and is hosted at GitHub
-                                (https://github.com/umitems/umitems.github.io). It is released under the terms of the MIT Licence.
-                            </li>
+                            <a target="_blank"
+                               href="https://github.com/umitems/umitems.github.io">
+                                <li class="card advantage {{site.css}} white-text waves-effect waves-light">
+                                    <h4>fully-open-source</h4> Material's source code is fully open source and is hosted at GitHub
+                                    (https://github.com/umitems/umitems.github.io). It is released under the terms of the MIT Licence.
+                                </li>
+                            </a>
                         </ul>
                     </div>
                     <div class="col s12 m6">
                         <ul>
-                            <li class="card advantage {{site.css}} white-text waves-effect waves-light">
-                                <h4>hosted-on-github</h4> Your website/blog can be hosted for free on GitHub, which
-                                means you get to take advantage of GitHub's servers which have proven themselves to
-                                provide almost 100% uptime.
-                            </li>
+                            <a target="_blank"
+                               href="https://github.com/umitems">
+                                <li class="card advantage {{site.css}} white-text waves-effect waves-light">
+                                    <h4>hosted-on-github</h4> Your website/blog can be hosted for free on GitHub, which
+                                    means you get to take advantage of GitHub's servers which have proven themselves to
+                                    provide almost 100% uptime.
+                                </li>
+                            </a>
 
                         </ul>
                     </div>
