--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ layout: default
 
 
             <div class="row">
-                <h1><br>-advantages-<br></h1>
+                <h1><br>Experience<br></h1>
 
                 <div class="container-fluid">
                     <div class="col s12 m6">
