--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@ layout: default
         <div id="non-skrollr">
 
             <div class="container-fluid">
-                <div class="mast">
+                <a class="mast">
                     <img src="img/profile-fastload.jpg" height="200" width="200">
                     <h4>Um Anusornpakdee</h4>
                     <h5>Android Developer, Agile, Work remotely</h5>
                     <i class="mdi mdi-bell"></i> <!-- bell -->
                     <h6>based on google&trade;'s <b>material design</b> specifications</h6>
+                    <br>
+                    <a target="_blank" href="https://stackoverflow.com/users/1025935/umitems">
+                        <img src="http://stackoverflow.com/users/flair/1025935.png" width="208" height="58"></a>
                     <br>
                     <a target="_blank" href="https://github.com/umitems"
                        class=" darken-2 white-text text-darken-3 waves-effect waves-light">
@@ -27,9 +30,7 @@ layout: default
                        class=" darken-2 white-text text-darken-3 waves-effect waves-light">
                         <img src="img/twitter-box.svg" class="svg" width="50px" height="50px"></a>
 
-                    <a target="_blank" href="https://stackoverflow.com/users/1025935/umitems"
-                       class="darken-2 white-text text-darken-3 waves-effect waves-light ">
-                        <img src="img/stackoverflow.svg" class="svg" width="50px" height="50px"></a>
+
 
 
                     <!--   <br>-->
@@ -48,83 +49,83 @@ layout: default
                     <br>
                     <br>
                     <br>
-                </div>
             </div>
-
-
-            <div class="container-fluid card {{ site.css }} z-depth-2 waves-effect waves-light">
-                <div class="cover z-depth-1" style="background-image: /*url('{{site.baseurl}}/img/1.jpg');*/">
-                    <div class="filter {{site.css}}" style="opacity: 0.7;">
-                        <div class="cover-text {{ site.css }}-text text-darken-4">
-                            <span style="font-size: 50px;"> </span>
-                        </div>
-                    </div>
-                </div>
-                <div class="card-content white-text">
-                    <div class="card-title">
-                        <h4></h4>
-                    </div>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vel purus sagittis, eleifend ante
-                    quis, tempus lectus. Vivamus maximus nibh lectus, sed gravida sapien imperdiet in.
-                    <br>
-                    <br> Curabitur non purus rutrum, iaculis mauris ac, placerat turpis. Donec vel semper enim, ut
-                    ultrices sem. Fusce rutrum, justo id porta malesuada, purus erat gravida metus, sit amet viverra
-                    turpis lacus nec mi. Aliquam et mi vel ipsum mollis aliquam eu eget augue. Lorem ipsum dolor sit
-                    amet, consectetur adipiscing elit.
-                    <br>
-                    <bR> Aliquam vel purus sagittis, eleifend ante quis, tempus lectus. Vivamus maximus nibh lectus, sed
-                    gravida sapien imperdiet in. Curabitur non purus rutrum, iaculis mauris ac, placerat turpis. Donec
-                    vel semper enim, ut ultrices sem.
-                    <br>
-                    <br> Fusce rutrum, justo id porta malesuada, purus erat gravida metus, sit amet viverra turpis lacus
-                    nec mi. Aliquam et mi vel ipsum mollis aliquam eu eget augue.
-                </div>
-            </div>
-
-
-            <div class="row">
-                <h1><br>Experience<br></h1>
-
-                <div class="container-fluid">
-                    <div class="col s12 m6">
-                        <ul>
-                            <a target="_blank"
-                               href="https://play.google.com/store/apps/developer?id=Um+Anusornpakdee+%28umitems%29">
-                                <li class="card advantage {{site.css}} white-text darken-1 waves-effect waves-light">
-                                    <div style="text-align: center;">
-                                        <h4>My Android App on PlayStore</h4>
-                                        <img src="https://developer.android.com/images/brand/en_generic_rgb_wo_60.png"
-                                             width="172" height="60">
-                                    </div>
-                                </li>
-                            </a>
-                            <a target="_blank"
-                               href="https://github.com/umitems/umitems.github.io">
-                                <li class="card advantage {{site.css}} white-text waves-effect waves-light">
-                                    <h4>fully-open-source</h4> Material's source code is fully open source and is hosted at GitHub
-                                    (https://github.com/umitems/umitems.github.io). It is released under the terms of the MIT Licence.
-                                </li>
-                            </a>
-                        </ul>
-                    </div>
-                    <div class="col s12 m6">
-                        <ul>
-                            <a target="_blank"
-                               href="https://github.com/umitems">
-                                <li class="card advantage {{site.css}} white-text waves-effect waves-light">
-                                    <h4>hosted-on-github</h4> Your website/blog can be hosted for free on GitHub, which
-                                    means you get to take advantage of GitHub's servers which have proven themselves to
-                                    provide almost 100% uptime.
-                                </li>
-                            </a>
-
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-
         </div>
+
+
+        <div class="container-fluid card {{ site.css }} z-depth-2 waves-effect waves-light">
+            <div class="cover z-depth-1" style="background-image: /*url('{{site.baseurl}}/img/1.jpg');*/">
+                <div class="filter {{site.css}}" style="opacity: 0.7;">
+                    <div class="cover-text {{ site.css }}-text text-darken-4">
+                        <span style="font-size: 50px;"> </span>
+                    </div>
+                </div>
+            </div>
+            <div class="card-content white-text">
+                <div class="card-title">
+                    <h4></h4>
+                </div>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vel purus sagittis, eleifend ante
+                quis, tempus lectus. Vivamus maximus nibh lectus, sed gravida sapien imperdiet in.
+                <br>
+                <br> Curabitur non purus rutrum, iaculis mauris ac, placerat turpis. Donec vel semper enim, ut
+                ultrices sem. Fusce rutrum, justo id porta malesuada, purus erat gravida metus, sit amet viverra
+                turpis lacus nec mi. Aliquam et mi vel ipsum mollis aliquam eu eget augue. Lorem ipsum dolor sit
+                amet, consectetur adipiscing elit.
+                <br>
+                <bR> Aliquam vel purus sagittis, eleifend ante quis, tempus lectus. Vivamus maximus nibh lectus, sed
+                gravida sapien imperdiet in. Curabitur non purus rutrum, iaculis mauris ac, placerat turpis. Donec
+                vel semper enim, ut ultrices sem.
+                <br>
+                <br> Fusce rutrum, justo id porta malesuada, purus erat gravida metus, sit amet viverra turpis lacus
+                nec mi. Aliquam et mi vel ipsum mollis aliquam eu eget augue.
+            </div>
+        </div>
+
+
+        <div class="row">
+            <h1><br>Experience<br></h1>
+
+            <div class="container-fluid">
+                <div class="col s12 m6">
+                    <ul>
+                        <a target="_blank"
+                           href="https://play.google.com/store/apps/developer?id=Um+Anusornpakdee+%28umitems%29">
+                            <li class="card advantage {{site.css}} white-text darken-1 waves-effect waves-light">
+                                <div style="text-align: center;">
+                                    <h4>My Android App on PlayStore</h4>
+                                    <img src="https://developer.android.com/images/brand/en_generic_rgb_wo_60.png"
+                                         width="172" height="60">
+                                </div>
+                            </li>
+                        </a>
+                        <a target="_blank"
+                           href="https://github.com/umitems/umitems.github.io">
+                            <li class="card advantage {{site.css}} white-text waves-effect waves-light">
+                                <h4>fully-open-source</h4> Material's source code is fully open source and is hosted at GitHub
+                                (https://github.com/umitems/umitems.github.io). It is released under the terms of the MIT Licence.
+                            </li>
+                        </a>
+                    </ul>
+                </div>
+                <div class="col s12 m6">
+                    <ul>
+                        <a target="_blank"
+                           href="https://github.com/umitems">
+                            <li class="card advantage {{site.css}} white-text waves-effect waves-light">
+                                <h4>hosted-on-github</h4> Your website/blog can be hosted for free on GitHub, which
+                                means you get to take advantage of GitHub's servers which have proven themselves to
+                                provide almost 100% uptime.
+                            </li>
+                        </a>
+
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+
     </div>
+</div>
 
 </div>
