--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@ layout: default
         <div id="non-skrollr">
 
             <div class="container-fluid">
-                <a class="mast">
+                <div class="mast">
                     <img src="img/profile-fastload.jpg" height="200" width="200">
                     <h4>Um Anusornpakdee</h4>
                     <h5>Android Developer, Agile, Work remotely</h5>
                     <i class="mdi mdi-bell"></i> <!-- bell -->
                     <h6>based on google&trade;'s <b>material design</b> specifications</h6>
                     <br>
+
+
                     <a target="_blank" href="https://stackoverflow.com/users/1025935/umitems">
                         <img src="http://stackoverflow.com/users/flair/1025935.png" width="208" height="58"></a>
                     <br>
@@ -29,26 +31,25 @@ layout: default
                     <a target="_blank" href="https://th.linkedin.com/in/umanusorn"
                        class=" darken-2 white-text text-darken-3 waves-effect waves-light">
                         <img src="img/twitter-box.svg" class="svg" width="50px" height="50px"></a>
+                </div>
 
 
-
-
-                    <!--   <br>-->
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
+                <!--   <br>-->
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
             </div>
         </div>
 
