--- a/index.html
+++ b/index.html
@@ -10,11 +10,8 @@ layout: default
                 <div class="mast">
                     <img src="img/profile-fastload.jpg" height="200" width="200">
                     <h4>Um Anusornpakdee</h4>
-                    <h5>Android Developer, Agile, Work remotely</h5>
+                    <h5>Android Developer, Work remotely, Agile</h5>
                     <i class="mdi mdi-bell"></i> <!-- bell -->
-                    <h6>based on google&trade;'s <b>material design</b> specifications</h6>
-                    <br>
-
 
                     <a target="_blank" href="https://stackoverflow.com/users/1025935/umitems">
                         <img src="http://stackoverflow.com/users/flair/1025935.png" width="208" height="58"></a>
