--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
                         <img src="img/linkedin-box.svg" class="svg" width="50px" height="50px"></a>
 
 
-                    <a target="_blank" href="https://th.linkedin.com/in/umanusorn"
+                    <a target="_blank" href="https://twitter.com/umanusorn"
                        class=" darken-2 white-text text-darken-3 waves-effect waves-light">
                         <img src="img/twitter-box.svg" class="svg" width="50px" height="50px"></a>
                 </div>
